# orchestrator-service

./: .dockerignore  .gitignore  Dockerfile  README.md  app_nemo_test.py  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/adapters/: base.py  filter_adapter.py  llm_adapter.py  moderation_adapter.py  rag_adapter.py  stt_adapter.py  tts_adapter.py
app/api/: dependencies.py  middleware.py
app/api/v1/: router.py  schemas.py
app/common/: __init__.py  constants.py  exceptions.py  faq_data.py  logging.py
app/orchestration/: __init__.py  graph.py  state.py
app/repositories/: base.py  redis_repository.py
app/services/: __init__.py  fast_path.py  input_guardrails.py  pipeline_coordinator.py
core/nemo_config/: config.yml  main.co  rails.co
infra/nginx/: nginx.conf
tests/: __init__.py  conftest.py
tests/unit/: test_fast_path.py  test_graph.py  test_input_guardrails.py  test_pipeline_coordinator.py
